# airalloc-ga

./: README.md  main.py  pyproject.toml
data/: aircraft.csv  airports.csv  demand.csv  routes.csv
notebooks/: AirAlloc_demo.ipynb
src/airalloc/: __init__.py  data.py  decoder.py  fitness.py  models.py  visualize.py
src/airalloc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/airalloc/genetic/: algorithm.py  operators.py
